fixed cpucooler table table width overflow scroll

--- a/app/assets/stylesheets/pcpart.scss
+++ b/app/assets/stylesheets/pcpart.scss
@@ -47,6 +47,12 @@
     .td-image{
       padding-top: 10px;
     }
+    .td-box{
+      overflow-x: auto;
+      white-space: nowrap;
+      max-width: 0;
+      padding: 0 5px;
+    }
   }
 
   .content-top{
